ui-tests/fail-1.72/not-render.stderr
error[E0277]: the trait bound `NotRender: RenderAttributeValue` is not satisfied
 --> fail-1.72/not-render.rs:6:26
  |
6 |         html["attr-user"=name] {
  |                          ^^^^ the trait `RenderAttributeValue` is not implemented for `NotRender`
  |
  = help: the following other types implement trait `RenderAttributeValue`:
            bool
            char
            isize
            i8
            i16
            i32
            i64
            i128
          and $N others
  = note: required for `&NotRender` to implement `RenderAttributeValue`

error[E0277]: the trait bound `NotRender: Render` is not satisfied
 --> fail-1.72/not-render.rs:8:36
  |
8 |                 strong { "Hello " @name "!" }
  |                                    ^^^^ the trait `Render` is not implemented for `NotRender`
  |
  = help: the following other types implement trait `Render`:
            bool
            char
            isize
            i8
            i16
            i32
            i64
            i128
          and $N others
  = note: required for `&NotRender` to implement `Render`
